add get a repository endpoint + fix create repo permission missing
